[package]
name = "auth0_client"
version = "0.1.3"
edition = "2021"
description = "An unofficial Auth0 API client for Rust"
documentation = "https://docs.rs/auth0_client"
repository = "https://github.com/Aeradriel/auth0_client_rs"
homepage = "https://github.com/Aeradriel/auth0_client_rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["auth0", "authorization", "client", "api"]
categories = ["api-bindings", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alcoholic_jwt = "4091.0.0"
async-trait = "0.1.61"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
mockito = "0.31.1"
tokio = { version = "1.24.1", features = ["macros"] }
