[package]
name = "auth0_client"
version = "0.2.2"
edition = "2021"
description = "An unofficial Auth0 API client for Rust"
documentation = "https://docs.rs/auth0_client"
repository = "https://github.com/Aeradriel/auth0_client_rs"
homepage = "https://github.com/Aeradriel/auth0_client_rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["auth0", "authorization", "client", "api"]
categories = ["api-bindings", "authentication"]

[dependencies]
alcoholic_jwt = { version = "4091.0.0", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
async-trait = "0.1.61"
chrono = { version = "0.4.23", features = ["serde"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = { version = "0.12.4", default-features = false, features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.38"
urlencoding = "2.1.2"
tracing = { version = "0.1.40", optional = true }
log = { version = "0.4.17", optional = true }

[dev-dependencies]
mockito = "0.31.1"
tokio = { version = "1.24.1", features = ["macros"] }

[features]
default = ["alcoholic_jwt", "log"]
jsonwebtoken = ["dep:jsonwebtoken"]
alcoholic_jwt = ["dep:alcoholic_jwt"]
log = ["dep:log"]
rustls = ["jsonwebtoken", "reqwest_rustls"]
reqwest_rustls = ["reqwest/rustls-tls"]
tracing = ["dep:tracing"]
